--- a/Homepage.html
+++ b/Homepage.html
@@ -68,11 +68,38 @@
             font-weight: bold;
             color: #fff;
         }
+        
+    nav {
+        background-color: rgba(0, 0, 0, 0.3); /* Transparent black background */
+        padding: 15px;
+        text-align: center;
+       
+      }
+  
+      nav a {
+        color: white;
+        text-decoration: none;
+        padding: 10px 15px;
+        margin: 0 10px;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+      }
+  
+      nav a:hover {
+        background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent white on hover */
+      }
+
     </style>
 </head>
 <body>
 
+
     <div class="container">
+        <nav>
+            <a href="https://www.cyberriskaware.com/protect-against-phishing-attacks-guide/" target="blank">GUIDE</a>
+            <a href="https://safebrowsing.google.com/safebrowsing/report_phish/?hl=en"  target="blank">Report Website</a>
+            <a href="https://portswigger.net/daily-swig/phishing">NEWS</a>
+          </nav>
         <h1>Phishing Detection using Machine Learning</h1>
         <form action='/Predict' method='POST'>
         <label >Enter URL:</label>
